css/vue.css
/* ... */
.sidebar>h1 {
  margin: 0 auto 1rem;
  font-size: 1.5rem;
  font-weight: 300;
  text-align: center
}

.sidebar>h1 a {
  color: inherit;
  text-decoration: none
}

.sidebar>h1 .app-nav {
  display: block;
  position: static
}

.sidebar .sidebar-nav {
  line-height: 2em;
  padding-bottom: 40px
}

.sidebar li.collapse .app-sub-sidebar {
  display: none
}

.sidebar ul {
  margin: 0;
  padding: 0
}

.sidebar li>p {
  margin: 0;
  padding: 10px 15px;
  margin-right: 6px;
  font-size: 14px;
  font-family: PingFangSC-Semibold,
  PingFang SC;
  font-weight: 600;
  color: #313131;
}

.sidebar ul,
.sidebar ul li {
  list-style: none;
  position: relative;
}

.sidebar ul li a {
  border-bottom: none;
  display: block
}

.sidebar ul li ul {
  padding-left: 20px
}

.sidebar::-webkit-scrollbar {
  width: 0px;
}
.sidebar::-webkit-scrollbar:hover {
  width: 4px;
}


.sidebar::-webkit-scrollbar-thumb {
  background: transparent;
  border-radius: 4px
}

.sidebar:hover::-webkit-scrollbar-thumb {
  background: hsla(0, 0%, 53%, .4)
}

.sidebar:hover::-webkit-scrollbar-track {
  background: hsla(0, 0%, 53%, .1)
}

.sidebar-toggle {
  background-color: transparent;
  border: 0;
  outline: none;
  padding: 0;
  position: absolute;
  top: 7px;
  left: 281px;
  text-align: center;
  transition: opacity .3s;
  width: 29px;
  z-index: 4;
  transition: left .25s ease-out;
}

.sidebar-toggle .sidebar-toggle-button:hover {
  opacity: .4
}

.sidebar-toggle span {
  background-image: url(../img/close.svg);
  background-size: 34px;
  display: block;
  width: 29px;
  height: 29px;
}
.sidebar-toggle span:not(:first-child) {
  display: none;
}

body.sticky .sidebar,
body.sticky .sidebar-toggle {
  position: fixed
}

.content {
  padding-top: 60px;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 300px;
  transition: left .25s ease
}

.markdown-section {
  margin: 0 auto;
  max-width: 800px;
  padding: 30px 15px 40px;
  position: relative
}

.markdown-section>* {
  box-sizing: border-box;
  font-size: inherit
}

.markdown-section>:first-child {
  margin-top: 0 !important
}

.markdown-section hr {
  border: none;
  border-bottom: 1px solid #eee;
  margin: 2em 0
}

.markdown-section iframe {
  border: 1px solid #eee
}

.markdown-section table {
  border-collapse: collapse;
  border-spacing: 0;
  display: block;
  margin-bottom: 1rem;
  overflow: auto;
  width: 100%
}

.markdown-section th {
  font-weight: 700
}

.markdown-section td,
.markdown-section th {
  border: 1px solid #ddd;
  padding: 6px 13px
}

.markdown-section tr {
  border-top: 1px solid #ccc
}

.markdown-section p.tip,
.markdown-section tr:nth-child(2n) {
  background-color: #f8f8f8
}

.markdown-section p.tip {
  border-bottom-right-radius: 2px;
  border-left: 4px solid #f66;
  border-top-right-radius: 2px;
  margin: 2em 0;
  padding: 12px 24px 12px 30px;
  position: relative
}

.markdown-section p.tip:before {
  background-color: #f66;
  border-radius: 100%;
  color: #fff;
  content: "!";
  font-family: Dosis, Source Sans Pro, Helvetica Neue, Arial, sans-serif;
  font-size: 14px;
  font-weight: 700;
  left: -12px;
  line-height: 20px;
  position: absolute;
  height: 20px;
  width: 20px;
  text-align: center;
  top: 14px
}

.markdown-section p.tip code {
  background-color: #efefef
}

.markdown-section p.tip em {
  color: #34495e
}

.markdown-section p.warn {
  background: rgba(66, 185, 131, .1);
  border-radius: 2px;
  padding: 1rem
}

body.close .sidebar {
  transform: translateX(-300px)
}

body.close .sidebar-toggle {
  left: 0;
  width: auto;
  transition: left .25s ease-out;
  padding: 0;
}
body.close .sidebar-toggle span {
  background-image: url(../img/open.svg);
}

body.close .content {
  left: 0
}

@media print {

  .app-nav,
  .github-corner,
  .sidebar,
  .sidebar-toggle {
    display: none
  }
}

@media screen and (max-width:768px) {

  .github-corner,
  .sidebar,
  .sidebar-toggle {
    position: fixed
  }

  .app-nav {
    margin-top: 16px
  }

  .app-nav li ul {
    top: 30px
  }

  main {
    height: auto;
    overflow-x: hidden
  }

  .sidebar {
    left: -300px;
    transition: transform .25s ease-out
  }

  .content {
    left: 0;
    max-width: 100vw;
    position: static;
    padding-top: 20px;
    transition: transform .25s ease
  }

  .app-nav,
  .github-corner {
    transition: transform .25s ease-out
  }

  .sidebar-toggle {
    background-color: transparent;
    width: auto;
    padding: 30px 30px 10px 10px
  }

  body.close .sidebar {
    transform: translateX(300px)
  }

  body.close .sidebar-toggle {
    background-color: hsla(0, 0%, 100%, .8);
    transition: background-color 1s;
    width: 284px;
    padding: 10px 0;
  }

  body.close .content {
    transform: translateX(300px)
  }

  body.close .app-nav,
  body.close .github-corner {
    display: none
  }

  .github-corner:hover .octo-arm {
    animation: none
  }

  .github-corner .octo-arm {
    animation: a .56s ease-in-out
  }
}

@keyframes a {

  0%,
  to {
    transform: rotate(0)
  }

  20%,
  60% {
    transform: rotate(-25deg)
  }

  40%,
  80% {
    transform: rotate(10deg)
  }
}

section.cover {
  -ms-flex-align: center;
  align-items: center;
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
  display: none
}

section.cover.show {
  display: -ms-flexbox;
  display: flex
}

section.cover.has-mask .mask {
  background-color: #fff;
  opacity: .8;
  position: absolute;
  top: 0;
  height: 100%;
  width: 100%
}

section.cover .cover-main {
  -ms-flex: 1;
  flex: 1;
  margin: -20px 16px 0;
  text-align: center;
  z-index: 1
}

section.cover a {
  color: inherit
}

section.cover a,
section.cover a:hover {
  text-decoration: none
}

section.cover p {
  line-height: 1.5rem;
  margin: 1em 0
}

section.cover h1 {
  color: inherit;
  font-size: 2.5rem;
  font-weight: 300;
  margin: .625rem 0 2.5rem;
  position: relative;
  text-align: center
}

section.cover h1 a {
  display: block
}
/* ... */

